<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:roundimage="http://schemas.android.com/apk/res-auto"
    android:id="@+id/personal_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <include
        android:id="@+id/top_title"
        layout="@layout/title_bar" />

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_below="@+id/top_title" >

        <scl.leo.library.image.HeaderImageView
            android:id="@+id/img_edit_add_photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_launcher"
            roundimage:border_color="@color/base_black_gray"
            roundimage:border_width="4dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_top"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/bg_border"
            android:orientation="vertical"
            android:padding="3dp" >

            <EditText
                android:id="@+id/et_edit_name"
                style="@style/login_edittext"
                android:hint="@string/input_name" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_font" />

            <EditText
                android:id="@+id/et_edit_email"
                style="@style/login_edittext"
                android:hint="@string/input_email"
                android:inputType="textEmailAddress" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_font" />

            <EditText
                android:id="@+id/et_edit_mobile"
                style="@style/login_edittext"
                android:hint="@string/input_mobile"
                android:inputType="phone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_font" />

            <TextView
                android:id="@+id/tv_edit_gender"
                style="@style/login_edittext"
                android:gravity="center"
                android:text="@string/input_gender" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_font" />

            <TextView
                android:id="@+id/tv_edit_birthday"
                style="@style/login_edittext"
                android:gravity="center"
                android:text="@string/input_birthday" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>